--- a/Proyecto BD/clientes.html
+++ b/Proyecto BD/clientes.html
@@ -22,17 +22,17 @@
 
     <main class="contenido-centrado mt mb">
 
-        <h1>Agregar un Proveedor</h1>
+        <h1>Agregar un Cliente</h1>
 
         <form class="formulario">
             <fieldset>
-                <legend> Información sobre el Proveedor</legend>
+                <legend> Información sobre el Cliente</legend>
 
                 <label for="nombre">Nombre</label>
-                <input type="text" placeholder="Nombre del proveedor" id="nombre" required>
+                <input type="text" placeholder="Nombre Completo" id="nombre" required>
 
                 <label for="telefono">Teléfono</label>
-                <input type="tel" placeholder="Teléfono del proveedor" id="telefono" required>
+                <input type="tel" placeholder="Teléfono de la Sucursal" id="telefono" required>
 
             </fieldset>
 
