--- a/Proyecto BD/sucursal.html
+++ b/Proyecto BD/sucursal.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="regresar">
-            <a href="index.html">
+            <a href="principal.html">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16l-4-4m0 0l4-4m-4 4h18" />
               </svg>
@@ -22,17 +22,17 @@
 
     <main class="contenido-centrado mt mb">
 
-        <h1>Agregar un Vendedor</h1>
+        <h1>Agregar una Sucursal</h1>
 
         <form class="formulario">
             <fieldset>
                 <legend> Información sobre la Sucursal</legend>
 
                 <label for="domicilio">Domicilio</label>
-                <input type="text" placeholder="Domicilio de la Sucursal" id="domicilio">
+                <input type="text" placeholder="Domicilio de la Sucursal" id="domicilio" required>
 
                 <label for="telefono">Teléfono</label>
-                <input type="tel" placeholder="Teléfono de la Sucursal" id="telefono">
+                <input type="tel" placeholder="Teléfono de la Sucursal" id="telefono" required>
 
             </fieldset>
 
