--- a/Proyecto BD/producto.html
+++ b/Proyecto BD/producto.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="regresar">
-            <a href="index.html">
+            <a href="principal.html">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16l-4-4m0 0l4-4m-4 4h18" />
               </svg>
@@ -29,13 +29,13 @@
                 <legend> Información sobre el Producto</legend>
 
                 <label for="nombre">Nombre</label>
-                <input type="text" placeholder="Nombre del producto" id="nombre">
+                <input type="text" placeholder="Nombre del producto" id="nombre" required>
 
                 <label for="marca">Marca</label>
-                <input type="text" placeholder="Marca del producto" id="marca">
+                <input type="text" placeholder="Marca del producto" id="marca" required>
 
-                <label for="precio">Precio</label>
-                <input type="number" placeholder="Precio del producto" id="precio" min="0">
+                <label for="precio">Precio de Venta</label>
+                <input type="number" placeholder="Precio del producto" id="precio" min="0" required>
 
             </fieldset>
 
@@ -43,14 +43,17 @@
                 <legend>Sucursal donde Ingresaran</legend>
 
                 <label for="stock">Stock:</label>
-                <input type="number" placeholder="Cantidad del producto" id="stock" min="1">
+                <input type="number" placeholder="Cantidad del producto" id="stock" min="1" required>
 
                 <label for="sucursales">Sucursal:</label>
-                <select id="sucursales">
+                <select id="sucursales" required>
                     <option value="" disabled selected>-- Seleccione --</option>
                     <option value="sucursal X">Sucursal X</option>
                     <option value="Sucursal Y">Sucursal Y</option>
                 </select>
+
+                <label for="stock">Precio de Compra</label>
+                <input type="number" placeholder="Precio del producto por unidad" id="stock" min="1" required>
             </fieldset>
 
 
